--- a/image_carousel/side_bar/sidebar.css
+++ b/image_carousel/side_bar/sidebar.css
@@ -9,7 +9,7 @@ body {
 
 .list-group {
     width: 250px;
-    margin: 20px;
+    height: 100%;
 }
 
 .list-group ul {
@@ -45,7 +45,7 @@ body {
 
 .main-menu {
   background: rgba(33, 33, 33, 0.8);
-  position:absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   height: 100%;
@@ -55,7 +55,7 @@ body {
   -webkit-transition:width .05s linear;
   transition:width 0.2s linear;
   -webkit-transform:translateZ(0) scale(1,1);
-  z-index:1000;
+  z-index:1001;
   backdrop-filter: blur(1px);
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -111,10 +111,12 @@ body {
     position: absolute;
     top: 0;
     left: 100%;
-    background-color: rgba(33, 33, 33, 0.5);
+    background-color: rgba(33, 33, 33, 0.8);
     width: 200px;
     z-index: 1000;
     overflow: hidden;
+    backdrop-filter: blur(1px);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .main-menu ul li:hover > ul {
